# t_cell_repertoire_simulations

./: .gitignore  project_style.mplstyle  pyproject.toml
code/repertoire_simulator/how_to_maintain_diversity/lib/: __init__.py  distributions.py
code/repertoire_simulator/lib/: __init__.py  plotting.py  sims.py  stats.py
code/repertoire_simulator/models/: __init__.py  antigen_update_functions.py  clonal_rate_functions.py  introduction_samplers.py
code/repertoire_simulator/run_simulations/: run_basic_repertoire_sim.py
code/repertoire_simulator/run_simulations/how_to_maintain_diversity/: metacommunity.py  metacommunity_with_source.py  rem_transition.py  saturating_response.py  source_of_new_clones.py
notebooks/: how_to_maintain_diversity.ipynb  simple_simulation_analysis.ipynb
notebooks/how_to_maintain_diversity/: section_1.ipynb  section_2.ipynb  section_3.ipynb  section_4.ipynb  section_5.ipynb
