[project]
name = "repertoire_simulator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "biopython==1.87",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.21",
    "decorator==5.3.1",
    "executing==2.2.1",
    "fonttools==4.63.0",
    "igraph==1.0.0",
    "ipykernel==7.2.0",
    "ipython==9.14.0",
    "ipython_pygments_lexers==1.1.1",
    "jedi==0.20.0",
    "joblib==1.5.3",
    "jupyter_client==8.8.0",
    "jupyter_core==5.9.1",
    "kiwisolver==1.5.0",
    "Levenshtein==0.27.3",
    "logomaker==0.8.7",
    "matplotlib==3.10.9",
    "matplotlib-inline==0.2.2",
    "narwhals==2.22.0",
    "nest-asyncio==1.6.0",
    "numpy==2.4.6",
    "packaging==26.2",
    "pandas==3.0.3",
    "parso==0.8.7",
    "pexpect==4.9.0",
    "pillow==12.2.0",
    "platformdirs==4.10.0",
    "prompt_toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "Pygments==2.20.0",
    "pyparsing==3.3.2",
    "pyrepseq==1.5.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "RapidFuzz==3.14.5",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "tidytcells==2.2.1",
    "tornado==6.5.6",
    "tqdm==4.67.3",
    "traitlets==5.15.1",
    "wcwidth==0.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code/repertoire_simulator"]